apps/downloader/nzbhydra2/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: nzbhydra2
spec:
  type: ClusterIP
  ports:
    - port: 5076
      targetPort: 5076
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nzbhydra2
