apps/downloader/nzbhydra2/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nzbhydra2
    namespace: downloader
    annotations:
        argocd.argoproj.io/sync-wave: "30"
        traefik.ingress.kubernetes.io/router.entrypoints: web239,websecure239
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd, authelia-forwardauth-authelia-basic-forward-auth@kubernetescrd
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:oCmqMCwN5gVPH4kVD6ZiCSiF7Fu/b573Cjb/b8TP7w==,iv:2pXAboktFJWgWpQpQq3gd4Zm8IoQwEstOjux3qvp3ok=,tag:kaDqKcL0LSC31lu+ajm7eg==,type:str]
          secretName: wildcard-cloudflare-production-02
    rules:
        - host: ENC[AES256_GCM,data:imUEkbvAA4MHt2jM2aXkraIbT1cuZy2m/tueebWCkQ==,iv:iwyJhNYdbWR+L1BD7oYI9Ee5jXq9mnylw6jGIn8bPaQ=,tag:c9a800AD7Sur/Kobm/owZQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nzbhydra2
                        port:
                            number: 5076
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1ay9XN3JnYnp5ZlZRZHR5
[...]
            Bow77RPLycqT/xWkAUflKfGoaj9KKW7e6TDwJpdT/FL95UjYJ8EXiQ==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuMG1DQldieFRtVGdCa3Ev
[...]
            GP4ECCvi5k/I9uL2Xmiu4HV6dqxVd3Lxl9wi9an0qU13d08fgL1OpQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-06T18:17:22Z"
    mac: ENC[AES256_GCM,data:vDbXpXJoDYBkrJENxz3Q/ytSCUuWNh44S1b7BUgQl0oIdkdwRLGJlWPaU3mI3uVQaIse+JIey6DaDtf7YbbegRBgr49y00Fnj7iJG7lmFQaed5GOCQV8cMByspZfAX74qvrtNCq8uEmYKmXEFdP6VF5gwRZgtfccTNzG9L0bznY=,iv:kdhmDoji+QKgP9ZtdZ37PsKL80c5BJHiUeXSIe6Ptxw=,tag:Fqsp3CKmfXsBaOZW/fjVlA==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.11.0
